# acsc-challenges-2021-public

./: README.md
crypto/CBCBC/: Dockerfile  docker-compose.yml  task.yml
crypto/CBCBC/challenge/: chal.py  secret.py  xinetd
crypto/CBCBC/solution/: solve.py
crypto/RSA stream/: task.yaml
crypto/RSA stream/challenge/: chal.enc  chal.py  flag.py  output.txt
crypto/RSA stream/solution/: ans.py
crypto/Two Rabin/: task.yaml
crypto/Two Rabin/challenge/: flag.py
crypto/Two Rabin/distfile/: chal.py
crypto/Two Rabin/solution/: output.py  sol.sage
crypto/secret-saver/: docker-compose.yml  php-docker  task.yml
crypto/secret-saver/challenge/: cron.php  init.sql
crypto/secret-saver/solution/: crime.py
crypto/swap_on_curve/: Makefile  task.yml
crypto/swap_on_curve/challenge/: gen.sage  gen.sage.py  task.sage
crypto/swap_on_curve/distfiles/: output.txt
crypto/wonderful_hash/: Dockerfile  docker-compose.yml  task.yml
crypto/wonderful_hash/challenge/: flag
crypto/wonderful_hash/distfiles/: chall.py
forensics/BitLocker Artifact/: task.yml
forensics/Nyong Coin/: task.yml
forensics/Zipcode/: task.yml
forensics/Zipcode/solution/: solve.py  (+1 more)
hardware/bitter/: task.yml
pwn/BVAR/: Dockerfile  Makefile  docker-compose.yml  task.yml  xinetd
pwn/carot/: Dockerfile  docker-compose.yml  task.yml
pwn/filtered/: Dockerfile  docker-compose.yml  task.yml
pwn/histogram/: Dockerfile  docker-compose.yml  task.yml
pwn/message_center/: Dockerfile  docker-compose.yml  task.yml
pwn/sysnote/: Dockerfile  docker-compose.yml  rootfs.cpio  run.sh  task.yml  xinetd
rev/Pickle_Rick/: task.yml
rev/Tnzr/: task.yml
rev/angel/: task.yml
rev/angel/challenge/: CMakeLists.txt  angel.as  angel.hpp  angel_compiler.cpp  angel_executor.cpp  build.sh  flag.txt  poc_angel.as
rev/angel/challenge/sdk/angelscript/lib/: libangelscript.so.2.35.0
rev/angel/challenge/sdk/samples/asbuild/projects/gnuc/: makefile
rev/encoder/: task.yml
rev/oak/: task.yml
rev/oak/challenge/oak/: Cargo.toml  build.sh
rev/oak/challenge/oak/src/: client.rs  encoder.rs  ram.rs  server.rs
rev/sugar/: task.yml
web/api/: task.yml
web/baby-developer/: task.yml
web/breaking-logics/: docker-compose.yml  fake_flag.jsp  pack-distfiles.py  task.yml
web/cowsay-as-a-service/: README.md  docker-compose.yml  spawner-template.html  task.yml
web/favorite-emojis/: README.md  task.yml
web/thy-son/: README.md  docker-compose.yml  spawner-template.html  task.yml
(+164 files in other folders)
