[package]
name = "oak"
version = "0.1.0"
edition = "2018"

[dependencies]
byteorder = "1"
rand = "0.8"
ring = "0.16"

[profile.release]
opt-level = 1

[features]
server = []
client = []

[[bin]]
name = "server"
path = "src/server.rs"
required-features = ["server"]

[[bin]]
name = "client"
path = "src/client.rs"
required-features = ["client"]
